cli/tests/snapshot/snapshots/snapshot__query_stdout_query_included_field.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
{
  "doc": "Doc of y",
  "optional": false,
  "not_exported": false,
  "priority": "default",
  "value": "1"
}
