cli/tests/snapshot/snapshots/snapshot__test_stdout_fail_wrong_output.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
testing foo/0...FAILED
testing foo/1...FAILED
testing foo/2...FAILED
testing foo/3...FAILED
test foo/0 failed
error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

test foo/1 failed
error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

test foo/2 failed
error: contract broken by a value
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ std.contract.Equal 2
   │ -------------------- expected type
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
   │
 1 │ foo
   │ ^^^ applied to this expression
   │
   ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:30:7
   │
30 │     = 1,
   │       - evaluated to this expression

test foo/3 failed
error: contract broken by a value
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ std.contract.Equal 3
  │ -------------------- expected type
  │
  ┌─ [INPUTS_PATH]/doctest/fail_wrong_output.ncl:1:1
  │
1 │ foo + 1
  │ ^^^^^^^ applied to this expression
  │
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ 2
  │ - evaluated to this value
